--- a/css/displaySupportInfo.css
+++ b/css/displaySupportInfo.css
@@ -1,90 +1,43 @@
-body {
-    margin: 0;
-    padding: 20;
-    font-family:Arial, sans-serif;
-    background-color: aliceblue;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-
-
-
-
-.top-header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    color: black; /* You can change the text color as needed */
-    text-align: lef; /* Center the text horizontally */
-    padding: 20px; /* Add some padding for spacing */
-   
-}
-
-
-
-
-.left-section, .rigth-section {
-    width:40%; 
-    display: inline-block;
-    padding: 20px;
-}
-
-.left-section {
-    text-align: left;
-    flex: left;
-}
-
-.rigth-section {
-    
-    flex: right;
-}
-
-
-h2 {
-    margin-top: 0;
-    color: black;
-}
-
-.form-group {
-    margin: 20px;
-    text-align: left;
-}
-
-label {
-    font-weight: bold;
-    color: #555
-}
-
-input, textarea {
-    width: 100%;
-    padding: 10px;
+.left-section, .right-section {
     border: 1px solid #ccc;
-    border-radius: 5px;
-    outline: none;
+    margin: 20px;
+    padding: 10px;
+    float: left;
+    border-radius: 10px;
+    width:40%; 
+    flex: left;
+    text-align: left;
 }
 
-button{
+.left-section2{
+    margin: 20px;
     padding: 10px;
+    float: left;
+    border-radius: 10px;
+    width:40%; 
+    text-align: left;
+}
+
+
+.section{
+    width:85%; 
+    border: 1px solid #ccc;
+    margin: 20px;
+    padding: 10px;
+    float: left;
+    border-radius: 10px;
+}
+
+.section-btn {
+    width:85%; 
+    margin: 20px;
+    padding: 5px;
+    float: left;
+    text-align: center;
     background-color: #007bff;
     color: #fff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+
 }
-
-
-input[type="file"] {
-    padding: 10px 0;
-    height: auto;
-}
-
-
-
-
-
-
-
-
-
