--- a/css/contact.css
+++ b/css/contact.css
@@ -1,12 +1,12 @@
 
 
-.container{
+/*.container{
     background-color:white ;
     width: 80;
     margin: 0 auto;
     padding: 20px;
     text-align: center;
-    }
+    }*/
 
 
 
@@ -28,5 +28,12 @@
 .submit-button{
     background-color: #9fcfd3ff;
     float:right;
+}
+.boxContainer{
+  width:600px ;
+  height:500px ;
+  border:1px solid #000000;
+  border-radius: 10px;
+  
 }
 
