--- a/css/displaySupportInfo.css
+++ b/css/displaySupportInfo.css
@@ -1,4 +1,52 @@
-.left-section, .right-section {
+.left-section2 {
+    border: 1px solid #ccc;
+    float:left;
+    left: left;
+    border-radius: 10px;
+    width:50%; 
+    height: 100%;
+    text-align: left;
+}
+
+.right-section2 { 
+    border: 1px solid #ccc;
+    float: right;
+    left: right;
+    border-radius: 10px;
+    width:50%; 
+    height: 100%;
+
+    text-align: left;
+}
+
+
+.section-right-center {
+   
+    align-content: center;
+}
+
+.section2 {
+    align-content: center;
+    width:92%; 
+    margin: 10px;
+    padding: 10px;
+    float: right;
+    border-radius: 10px;
+
+}
+
+
+
+.left-section1{
+    margin: 20px;
+    padding: 10px;
+    float: left;
+    border-radius: 10px;
+    width:40%; 
+    text-align: left;
+}
+
+.right-section1 {
     border: 1px solid #ccc;
     margin: 20px;
     padding: 10px;
@@ -9,27 +57,21 @@
     text-align: left;
 }
 
-.left-section2{
-    margin: 20px;
-    padding: 10px;
-    float: left;
-    border-radius: 10px;
-    width:40%; 
-    text-align: left;
-}
-
 
 .section{
-    width:85%; 
+    width:92%; 
     border: 1px solid #ccc;
-    margin: 20px;
+    margin: 10px;
     padding: 10px;
-    float: left;
+    float: right;
     border-radius: 10px;
 }
 
+
+
+
 .section-btn {
-    width:85%; 
+    width:92%; 
     margin: 20px;
     padding: 5px;
     float: left;
