--- a/css/index.css
+++ b/css/index.css
@@ -1,37 +1,90 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-}
+
 
 header {
-    background-color: #800080;
-    padding: 20px;
+    background-color: lightseagreen;
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px;
+    border-radius: 5px;
 }
 
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+.header-left a {
+    color: #fff;
+    text-decoration: none;
+    margin-left: 0px;
 }
 
-nav ul li {
-    display: inline;
+.header-right a {
+    color: #fff;
+    text-decoration: none;
+    margin-left: 20px;
+}
+
+
+.search-bar {
+    margin-top: 20px;
+    margin-left: 0px;
+    display: flex;
+    align-items: center;
+}
+
+input[type="text"] {
+    padding: 8px;
     margin-right: 10px;
 }
 
-nav ul li a {
-    color: white;
-    text-decoration: none;
+select {
+    padding: 8px;
+    margin-right: 10px;
 }
 
-main {
-    padding: 20px;
+button {
+    padding: 8px;
+    margin-right: 10px;
 }
 
-footer {
-    background-color: #800080;
-    padding: 20px;
-    text-align: center;
-    color: white;
+.group-container {
+    margin: 20px auto;
+}
+
+.group {
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 15px;
+    /* text-align: center; */
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+    display:grid;
+}
+
+.groupContent {
+    display: inline;
+    float: left;
+    text-align: left;
+    padding: 5px;
+}
+
+/* .group img {
+    width: 100%;
+    border-radius: 5px;
+    margin-bottom: 10px;
+} */
+
+.group h3 {
+    margin-bottom: 10px;
+}
+
+.groupImg {
+    width: 100px;
+    height: 75px;
+}
+
+.logo {
+    height:30px;
+    width:30px;
+    padding:0px;
+    margin:0%;
 }
