--- a/css/login.css
+++ b/css/login.css
@@ -13,7 +13,7 @@ body{
     justify-content: center;
     align-items: center;
     background: linear-gradient(to rigt, #8f94fb, #4e54);
-    background-color: #8f94fb;
+    /* background-color: #8f94fb; */
 
 }
 
@@ -92,6 +92,8 @@ input{
     font-weight: bold;
     outline: 2px solid lightseagreen;
  }
+ 
+
 
 
  p{
@@ -102,11 +104,6 @@ input{
     font-weight: bold;
     cursor: pointer;
  }
-
-
-
-
-
 
 
 /* body {
