--- a/css/contact.css
+++ b/css/contact.css
@@ -1,39 +1,96 @@
 
 
-/*.container{
-    background-color:white ;
-    width: 80;
-    margin: 0 auto;
-    padding: 20px;
+.container{
+  display:flex;
+  justify-content: center;
+  padding: 20px;
+
+  column-gap: normal;
+   
+    height: 100vh;
+    
+    }
+    .PageText{
+      position: absolute;
+      top: 0;
+      left: 0;
+
+    }
+    .leftContainer{
+      flex:1;
+      display: flex;
+      background-image: url("../Images/instagram-01.png");
+      height: 500px;
+    width: 530px;
+    margin-top: 40px;
     text-align: center;
-    }*/
+    margin-right: 30px;
+    position: relative;
+    align-items: flex-end;
+      
+    }
+    .RightContainer{
+      flex: 1.3;
+      border: 1px solid black;
+      border-radius: 7px;
+      margin-top: 40px;
+      height: 500px;
+    width: 600px;
+    }
+    .form{
+      text-align: center;
+      padding: 20px;
 
-
+    }
+    .form input[type="text"]{
+      width: 70%;
+      
+    }
+    .form input[type="email"]{
+      width: 70%;
+    }
+    .form input[type="phoneNumber"]{
+      width: 70%;
+    }
+    
 
 .image1{
     height: 50px;
   width: 50px;
-  margin-top: 75px; 
+  border: 1px solid black;
+      border-radius: 7px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  margin-bottom: 10px;
+  margin-right: 20px;
+
 }
 .image2{
     height: 50px;
   width: 50px;
-  margin-top: 75px; 
+  border: 1px solid black;
+      border-radius: 7px;
+  position: absolute;
+  left: 50px;
+  bottom: 0;
+  margin-bottom: 10px;
+  margin-right: 20px; 
 }
 .image3{
     height: 50px;
   width: 50px;
-  margin-top: 75px; 
+  border: 1px solid black;
+  border-radius: 7px;
+  position: absolute;
+  left: 100px;
+  bottom: 0; 
+  margin-bottom: 10px;
+  margin-right: 20px;
 }
 .submit-button{
     background-color: #9fcfd3ff;
     float:right;
 }
-.boxContainer{
-  width:600px ;
-  height:500px ;
-  border:1px solid #000000;
-  border-radius: 10px;
-  
-}
+
 
