--- a/css/login.css
+++ b/css/login.css
@@ -14,8 +14,10 @@ body{
     align-items: center;
     background: linear-gradient(to rigt, #8f94fb, #4e54);
     /* background-color: #8f94fb; */
+    background-color: #899499;
 
 }
+
 
 
 .container{
