--- a/css/index.css
+++ b/css/index.css
@@ -30,6 +30,19 @@ header {
     text-decoration: underline; /* Add an underline on hover */
 }
 
+body{
+    background-color: #D3D3D3;
+}
+
+
+/* Footer */
+footer {
+    background-color:  lightseagreen;
+    color: #fff;
+    text-align: center;
+    padding: 1rem 0;
+}
+
 
 /* Search Bar */
 .search-bar {
@@ -67,7 +80,7 @@ button {
     margin-bottom: 20px;
     padding: 15px;
     /* text-align: center; */
-    border: 1px solid #ccc;
+    border: 1px solid black;
     border-radius: 5px;
     box-sizing: border-box;
     display:flex;
@@ -109,4 +122,6 @@ button {
     margin:0%;
 }
 
-
+.emptying {
+    margin-bottom: 60px;
+}
