--- a/css/index.css
+++ b/css/index.css
@@ -89,6 +89,7 @@ button {
     border-radius: 5px;
     box-sizing: border-box;
     display: flex;
+    background-color: rgba(255, 255, 255, 0.733);
 }
 
 .groupContent {
