--- a/css/contact.css
+++ b/css/contact.css
@@ -12,9 +12,7 @@
   
     
     }
-    body{
-      background-color: aqua;
-    }
+    
     /* Header */
 header {
   background-color: lightseagreen;
@@ -82,6 +80,7 @@ header {
       margin-top: 40px;
       height: 500px;
     width: 600px;
+    background-color: white;
     }
     form{
       text-align: center;
