--- a/css/index.css
+++ b/css/index.css
@@ -21,6 +21,8 @@
         justify-content: center;
         font-size: 16px;
         font-family: 'Circularfont', sans-serif;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
     }
 
     .secondary-nav a {
@@ -46,7 +48,10 @@
         justify-content: space-between;
         align-items: center;
         padding: 15px;
-        border-radius: 5px;
+        border-top-left-radius: 0px;
+        border-top-right-radius: 0px;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
         padding: 20px;
         font-size: 18px;
         font-family: 'Circularfont', Arial, Helvetica, sans-serif;
@@ -105,7 +110,7 @@ footer {
     color: #fff;
     text-align: center;
     padding: 30px 0;
-    
+    border-radius: 5px;
 }
 
 .footer-content {
