--- a/views/pages/displaySupportInfo.ejs
+++ b/views/pages/displaySupportInfo.ejs
@@ -31,11 +31,15 @@
             <a href="./registration.html" >Sign In</a>
             <!-- Add more links as needed -->
         </nav>
+        
+            
+                    
     </header>
     <!--h1> More Information About Support Group</h1-->
 
 
     <div class="top-section">
+        <h1>"here goes the name of the support group" Support Group</h1>
         <img class="image" src="../Images/img8.jpg">
 
     </div>
@@ -43,9 +47,35 @@
     <div class="bottom-section">
         <div class="left-section1">
 
-            <label for="group-info"> <strong> here goes the group name, description, etc </strong> </label>
+           
             
-            <!-- here goes the group name, description, etc-->
+            <div class = "nosection">     
+                <label for="description"> <strong> Description </strong> </label>
+                <!-- here goes the description text-->
+                
+            </div>
+    
+            <div class = "nosection">     
+                <label for="url"> You can get additional information in "here goes the url"  </label>
+                
+            </div>
+
+            <div class = "nosection"> 
+                 
+                <label for="contact-details"> <strong> Contact details </strong> </label>
+
+                <div class = "nosection"> 
+                    <div class = "nosection-inside"> 
+                        <label for="phone"> <strong> Phone Number: "here goes the phone number" </strong> </label>
+                    </div>
+                    <div class = "nosection-inside"> 
+                        <label for="email"> <strong> Email: "here goes the email" </strong> </label>
+                    </div>
+                </div>
+
+                    
+        
+            </div>  
             
         </div>
     
@@ -72,7 +102,7 @@
 
             <div class = "section"> 
                 
-                <label for="name"> <strong> Enter your details</strong>   </label>
+                <label for="name"> <strong> (Optional) Enter your details</strong>   </label>
 
                 
 
