--- a/views/pages/addSupportInfo.ejs
+++ b/views/pages/addSupportInfo.ejs
@@ -28,9 +28,10 @@
             <!-- Add more links as needed -->
         </nav>
     </header>
-    <!--div class="top-section">
+    <div class="top-section">
+        Create a new support group
 
-    </div-->
+    </div>
 
     <div class="bottom-section">
 
@@ -59,18 +60,34 @@
 
             </div>
 
-                    
-            <div class = "form-group">     
+            <!--div class = "form-group">     
                 <label for="capacity"> Capacity</label>
                 <input type="text" class = form-control id="capacity" name="capacity" required placeholder="Enter Capacity"> 
+            </div-->
+
+
+            <div class = "form-group">
+                        
+                <label for="url"> URL</label>
+                        <input type="text" class = form-control id="url" name="url" required placeholder="Enter URL"> 
+                        
             </div>
 
-        
             <div class = "form-group">
-                <label for="picture"> Upload Picture(s) </label>
-                <input type="file" class="file-control" id="pic" name="picture" accept="image/*" required>
-        
+                        
+                <label for="phone"> Phone Number</label>
+                        <input type="text" class = form-control id="phone" name="phone" required placeholder="Enter Phone Number"> 
+                        
             </div>
+
+            <div class = "form-group">
+                        
+                <label for="email"> Email</label>
+                        <input type="text" class = form-control id="email" name="email" required placeholder="Enter Email"> 
+                        
+            </div>
+            
+        
     
         </div>
         
@@ -103,6 +120,14 @@
                     <label for="appt">Select End Time</label>
                     <input type="time" id="appt" name="appt">
                 </form>
+            </div>
+
+
+            
+            <div class = "form-group">
+                <label for="picture"> Upload Picture(s) </label>
+                <input type="file" class="file-control" id="pic" name="picture" accept="image/*" required>
+        
             </div>
                     
     
