--- a/views/pages/addSupportInfo.ejs
+++ b/views/pages/addSupportInfo.ejs
@@ -28,10 +28,13 @@
             <!-- Add more links as needed -->
         </nav>
     </header>
+
     <div class="top-section">
-        Create a new support group
+        <h1>Create a new Support Group!</h1>
 
     </div>
+
+
 
     <div class="bottom-section">
 
