--- a/views/pages/displaySupportInfo.ejs
+++ b/views/pages/displaySupportInfo.ejs
@@ -83,24 +83,27 @@
             <div class = "right-section-up">   
                 <div class = "section">     
                     <label for="location"> <strong> Location </strong> </label>
+                    <!-- here goes the location-->
                     
                 </div>
         
                 <div class = "section">     
                     <label for="date"> <strong> Date </strong> </label>
+                    <!-- here goes the date-->
                     
                 </div>
     
                 <div class = "section"> 
                      
                     <label for="time"> <strong> Time </strong> </label>
+                    <!-- here goes the time-->
                         
             
                 </div>  
                 
             </div>
 
-            <div class = "section"> 
+            <div class = "section"> <!-- Reservation details are optional, but must be added to the database if they are filled-->
                 
                 <label for="name"> <strong> (Optional) Enter your details</strong>   </label>
 
@@ -108,7 +111,6 @@
 
                 <div class = "section2"> 
                                 
-                    <!--label for="name"> Reservation Name:  </label-->
 
                     <input type="text" class = form-control id="res_name" name="res_name" required placeholder="Reservation name"> 
                     
@@ -116,7 +118,6 @@
 
                 <div class = "section2"> 
                                 
-                    <!--label for="name"> Reservation Email:  </label-->
 
                     <input type="text" class = form-control id="res_name" name="res_name" required placeholder="Reservation email"> 
                     
