--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,7 +7,7 @@
 
     <nav class="header-right">
         <a href="registration">Refer Support</a>
-        <a href="registration">Register</a>
+        <a href="registration">Become An Organization</a>
         <a href="login" >Login</a>
         <a href="contactUs">Contact Us</a>
         
