--- a/views/pages/displaySupportInfo.ejs
+++ b/views/pages/displaySupportInfo.ejs
@@ -17,24 +17,23 @@
     
 </head>
 <body>
-    <header>
-        <div class="header-left">
-            <a><img class="logo" src="../Images/logo.png"></a>
-            <h1 style="display: inline; align-items: center; font-size: 20px;">Alturo</h1>
-        </div>
-        <nav class="header-right">
-            <a href="..\index.html">Home</a>
-            <a href="./aboutUs.html">About Us</a>
-            <a href="./contact.html">Contact Us</a>
-            <a href="./immediateSupport.html" >Immediate Support</a>
-            <a href="./login.html" >Login</a>
-            <a href="./registration.html" >Sign In</a>
-            <!-- Add more links as needed -->
-        </nav>
-        
+
+    <!-- Secondary Navigation -->
+    <div class="secondary-nav">
+        <a href="pages/aboutUs.html">About Us</a>
+        <a href="pages/immediateSupport.html" >Immediate Support</a>
+        <a href="#">Our Services</a>
+        <a href="#">Join Us</a>
+
+    </div>
+
+<header>
+    <!--ejs header-->
+    <%- include('../partials/header') %>
+</header>
+    
             
                     
-    </header>
     <!--h1> More Information About Support Group</h1-->
 
 
