--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -21,7 +21,7 @@
     <!-- Secondary Navigation -->
     <div class="secondary-nav">
         <a href="pages/aboutUs.html">About Us</a>
-        <a href="pages/immediateSupport.html" >Immediate Support</a>
+        <a href="/views/pages/immediateSupport.ejs" >Immediate Support</a>
         <a href="#">Our Services</a>
         <a href="#">Join Us</a>
 
