kobi made changes

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -20,8 +20,8 @@
 <body>
     <!-- Secondary Navigation -->
     <div class="secondary-nav">
-        <a href="pages/aboutUs.html">About Us</a>
-        <a href="/views/pages/immediateSupport.ejs" >Immediate Support</a>
+        <a href="aboutUs">About Us</a>
+        <a href="ImmediateSupport" >Immediate Support</a>
         <a href="#">Our Services</a>
         <a href="#">Join Us</a>
 
