--- a/views/pages/immediateSupport.ejs
+++ b/views/pages/immediateSupport.ejs
@@ -15,12 +15,13 @@
             <h1 style="display: inline; align-items: center; font-size: 20px;">Alturo</h1>
         </div>
         <nav class="header-right">
-            <a href="..\index.html">Home</a>
-            <a href="../pages/aboutUs.html">About us</a>
-            <a href="../pages/contact.html">Contact Us</a>
-            <a href="../pages/registration.html">Register</a>
-            <a href="../pages/login.html">Login</a>
+            <a href="index">Home</a>
+            <a href="aboutUs">About us</a>
+            <a href="contactUs">Contact Us</a>
+            <a href="registration">Become An Organisation</a>
+            <a href="login">Login</a>
             <!-- Add more links as needed -->
+
         </nav>
     </header>
 
